--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     auth: authorization tests
-    regress: regression test
+    regress: regression tests
+    smoke: smoke tests
